[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://StageManager.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Fondo" type="ColorRect" parent="."]
margin_left = -25.0
margin_right = 521.0
margin_bottom = 740.0
color = Color( 0.286275, 0.584314, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StageManager" type="Node2D" parent="."]
script = ExtResource( 4 )
Mob = ExtResource( 3 )

[node name="SpawnPoint1" type="Position2D" parent="StageManager"]
position = Vector2( 120, 40 )

[node name="SpawnPoint2" type="Position2D" parent="StageManager"]
position = Vector2( 240, 40 )

[node name="SpawnPoint3" type="Position2D" parent="StageManager"]
position = Vector2( 360, 40 )
[connection signal="move" from="Player" to="StageManager" method="_on_Player_move"]
